--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
+    "mysql": "^2.18.1",
     "pg": "^7.14.0",
     "reflect-metadata": "^0.1.13",
     "striptags": "^3.1.1",
